--- a/4.ipynb
+++ b/4.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:30.460593Z",
-     "start_time": "2025-03-18T14:11:29.622572Z"
+     "end_time": "2025-03-19T07:34:56.084043Z",
+     "start_time": "2025-03-19T07:34:56.081347Z"
     }
    },
    "source": [
@@ -22,13 +22,13 @@
     "from sklearn.metrics import accuracy_score, classification_report"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:31.698462Z",
-     "start_time": "2025-03-18T14:11:30.465055Z"
+     "end_time": "2025-03-19T07:34:57.332178Z",
+     "start_time": "2025-03-19T07:34:56.133121Z"
     }
    },
    "cell_type": "code",
@@ -43,13 +43,13 @@
    ],
    "id": "431e63b188ffa77e",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:31.785128Z",
-     "start_time": "2025-03-18T14:11:31.767041Z"
+     "end_time": "2025-03-19T07:34:57.384111Z",
+     "start_time": "2025-03-19T07:34:57.356751Z"
     }
    },
    "cell_type": "code",
@@ -70,23 +70,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 0 1]\n",
-      "Standard uniqueness: 0.5370370370370371\n"
+      "[2 0 0]\n",
+      "Standard uniqueness: 0.6666666666666666\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sequential Bootstrap: 100%|██████████| 3/3 [00:00<00:00, 285.11it/s]"
+      "Sequential Bootstrap: 100%|██████████| 3/3 [00:00<00:00, 271.39it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 2, 0]\n",
-      "Sequential uniqueness: 0.6666666666666666\n"
+      "[1, 0, 2]\n",
+      "Sequential uniqueness: 0.8611111111111112\n"
      ]
     },
     {
@@ -97,26 +97,26 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:32.337972Z",
-     "start_time": "2025-03-18T14:11:31.813686Z"
+     "end_time": "2025-03-19T07:34:57.957764Z",
+     "start_time": "2025-03-19T07:34:57.461450Z"
     }
    },
    "cell_type": "code",
    "source": "dollar_vol=my_afml.getDailyVol(dollar_bars_df.Close)",
    "id": "f8c5841a8efbed47",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:51.604374Z",
-     "start_time": "2025-03-18T14:11:32.345639Z"
+     "end_time": "2025-03-19T07:35:17.260660Z",
+     "start_time": "2025-03-19T07:34:57.979096Z"
     }
    },
    "cell_type": "code",
@@ -135,30 +135,30 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:51.614211Z",
-     "start_time": "2025-03-18T14:11:51.612375Z"
+     "end_time": "2025-03-19T07:35:17.328551Z",
+     "start_time": "2025-03-19T07:35:17.326679Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Define moving average windows\n",
-    "short_window = 50  # e.g., 50 periods\n",
-    "long_window = 1000  # e.g., 200 periods"
+    "short_window = 100  # e.g., 50 periods\n",
+    "long_window = 500  # e.g., 200 periods"
    ],
    "id": "46eb71311c19c9c5",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:51.755027Z",
-     "start_time": "2025-03-18T14:11:51.655028Z"
+     "end_time": "2025-03-19T07:35:17.559050Z",
+     "start_time": "2025-03-19T07:35:17.468647Z"
     }
    },
    "cell_type": "code",
@@ -174,39 +174,39 @@
    ],
    "id": "d356cbc0aed9e794",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:51.766312Z",
-     "start_time": "2025-03-18T14:11:51.763523Z"
+     "end_time": "2025-03-19T07:35:17.583542Z",
+     "start_time": "2025-03-19T07:35:17.580418Z"
     }
    },
    "cell_type": "code",
    "source": "dollar_t1=my_afml.getVb(dollar_bars_df.Close,dollar_events.index)",
    "id": "690264af2c3df0b9",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:52.024993Z",
-     "start_time": "2025-03-18T14:11:51.805946Z"
+     "end_time": "2025-03-19T07:35:17.902469Z",
+     "start_time": "2025-03-19T07:35:17.661866Z"
     }
    },
    "cell_type": "code",
    "source": "indM=my_afml.getIndMatrix(dollar_events.index,dollar_t1)",
    "id": "bc2a9baaff02f74",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:52.037486Z",
-     "start_time": "2025-03-18T14:11:52.035924Z"
+     "end_time": "2025-03-19T07:35:17.908036Z",
+     "start_time": "2025-03-19T07:35:17.906263Z"
     }
    },
    "cell_type": "code",
@@ -219,13 +219,13 @@
    ],
    "id": "9682a00628e38091",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:52.079853Z",
-     "start_time": "2025-03-18T14:11:52.078085Z"
+     "end_time": "2025-03-19T07:35:17.951708Z",
+     "start_time": "2025-03-19T07:35:17.950137Z"
     }
    },
    "cell_type": "code",
@@ -236,13 +236,13 @@
    ],
    "id": "75f61284645997c3",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:52.155356Z",
-     "start_time": "2025-03-18T14:11:52.122361Z"
+     "end_time": "2025-03-19T07:35:18.066690Z",
+     "start_time": "2025-03-19T07:35:18.032293Z"
     }
    },
    "cell_type": "code",
@@ -252,39 +252,39 @@
    ],
    "id": "8542b55d74f00c76",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:52.170071Z",
-     "start_time": "2025-03-18T14:11:52.168054Z"
+     "end_time": "2025-03-19T07:35:18.077332Z",
+     "start_time": "2025-03-19T07:35:18.075038Z"
     }
    },
    "cell_type": "code",
    "source": "dollar_t1_2024=my_afml.getVb(dollar_bars_2024.Close,dollar_events_2024.index)",
    "id": "bef9f6765b0e9bc",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:52.245364Z",
-     "start_time": "2025-03-18T14:11:52.211043Z"
+     "end_time": "2025-03-19T07:35:18.170711Z",
+     "start_time": "2025-03-19T07:35:18.139812Z"
     }
    },
    "cell_type": "code",
    "source": "dollar_vol_2024=my_afml.getDailyVol(dollar_bars_2024.Close)",
    "id": "93d44f06b6966d69",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:56.316780Z",
-     "start_time": "2025-03-18T14:11:52.322395Z"
+     "end_time": "2025-03-19T07:35:23.381425Z",
+     "start_time": "2025-03-19T07:35:18.205649Z"
     }
    },
    "cell_type": "code",
@@ -311,17 +311,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-18 14:11:56.078292 100.0% applyPtSlOnT1 done after 0.03 minutes. Remaining 0.0 minutes.\n"
+      "2025-03-19 07:35:23.148212 100.0% applyPtSlOnT1 done after 0.04 minutes. Remaining 0.0 minutes.\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:56.333495Z",
-     "start_time": "2025-03-18T14:11:56.331511Z"
+     "end_time": "2025-03-19T07:35:23.389748Z",
+     "start_time": "2025-03-19T07:35:23.386478Z"
     }
    },
    "cell_type": "code",
@@ -333,7 +333,7 @@
    ],
    "id": "e2504a9afe69c7e1",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -344,8 +344,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:11:59.034762Z",
-     "start_time": "2025-03-18T14:11:56.376128Z"
+     "end_time": "2025-03-19T07:35:27.281863Z",
+     "start_time": "2025-03-19T07:35:23.455357Z"
     }
    },
    "cell_type": "code",
@@ -366,11 +366,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-18 14:11:58.881692 100.0% mpNumCoEvents done after 0.01 minutes. Remaining 0.0 minutes.\n"
+      "2025-03-19 07:35:27.112004 100.0% mpNumCoEvents done after 0.01 minutes. Remaining 0.0 minutes.\n"
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -381,8 +381,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:12:03.630040Z",
-     "start_time": "2025-03-18T14:11:59.053032Z"
+     "end_time": "2025-03-19T07:35:32.895603Z",
+     "start_time": "2025-03-19T07:35:27.294313Z"
     }
    },
    "cell_type": "code",
@@ -403,11 +403,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-18 14:12:03.397147 100.0% mpSampleTW done after 0.04 minutes. Remaining 0.0 minutes.\n"
+      "2025-03-19 07:35:32.640211 100.0% mpSampleTW done after 0.04 minutes. Remaining 0.0 minutes.\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 42
   },
   {
    "metadata": {},
@@ -418,15 +418,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T14:12:03.651054Z",
-     "start_time": "2025-03-18T14:12:03.648989Z"
+     "end_time": "2025-03-19T07:35:32.923021Z",
+     "start_time": "2025-03-19T07:35:32.921080Z"
     }
    },
    "cell_type": "code",
    "source": "mean_avergage_uniqueness=out['tW'].mean()",
    "id": "457c23744bc10809",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 43
   },
   {
    "metadata": {},
@@ -437,8 +437,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T22:18:54.605790Z",
-     "start_time": "2025-03-18T22:18:54.501247Z"
+     "end_time": "2025-03-19T07:35:32.967572Z",
+     "start_time": "2025-03-19T07:35:32.964797Z"
     }
    },
    "cell_type": "code",
@@ -452,17 +452,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Serial Correlation of 'tW': 0.5239922155080112\n"
+      "Serial Correlation of 'tW': 0.542613728585851\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T22:20:11.276051Z",
-     "start_time": "2025-03-18T22:20:11.271800Z"
+     "end_time": "2025-03-19T07:35:33.145055Z",
+     "start_time": "2025-03-19T07:35:33.140023Z"
     }
    },
    "cell_type": "code",
@@ -493,14 +493,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Serial Correlation of 'tW': 0.5239922155080112\n",
-      "t-statistic: 14.68804048988226\n",
-      "p-value: 1.1819331953049815e-41\n",
+      "Serial Correlation of 'tW': 0.542613728585851\n",
+      "t-statistic: 16.67084960781626\n",
+      "p-value: 2.0793634918944046e-52\n",
       "The serial correlation is statistically significant (p < 0.05).\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -511,21 +511,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T22:24:30.464648Z",
-     "start_time": "2025-03-18T22:24:30.458144Z"
+     "end_time": "2025-03-19T07:35:33.276109Z",
+     "start_time": "2025-03-19T07:35:33.270749Z"
     }
    },
    "cell_type": "code",
    "source": "dollar_bins_secondary_model_2024=my_afml.getBins(dollar_trigger_secondary_model_2024,dollar_bars_2024.Close)\n",
    "id": "ad55d23ea1e567f5",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 46
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T22:26:08.220822Z",
-     "start_time": "2025-03-18T22:26:08.083125Z"
+     "end_time": "2025-03-19T07:35:33.494990Z",
+     "start_time": "2025-03-19T07:35:33.345727Z"
     }
    },
    "cell_type": "code",
@@ -559,16 +559,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7660818713450293\n",
+      "Accuracy: 0.685\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        -1.0       0.81      0.65      0.72        78\n",
-      "         0.0       0.00      0.00      0.00         0\n",
-      "         1.0       0.75      0.86      0.80        93\n",
+      "        -1.0       0.63      0.63      0.63        84\n",
+      "         0.0       0.00      0.00      0.00         1\n",
+      "         1.0       0.72      0.73      0.73       115\n",
       "\n",
-      "    accuracy                           0.77       171\n",
-      "   macro avg       0.52      0.50      0.51       171\n",
-      "weighted avg       0.78      0.77      0.77       171\n",
+      "    accuracy                           0.69       200\n",
+      "   macro avg       0.45      0.45      0.45       200\n",
+      "weighted avg       0.68      0.69      0.68       200\n",
       "\n"
      ]
     },
@@ -576,22 +576,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mmx/anaconda3/envs/AFML/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "/home/mmx/anaconda3/envs/AFML/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/mmx/anaconda3/envs/AFML/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "/home/mmx/anaconda3/envs/AFML/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/mmx/anaconda3/envs/AFML/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "/home/mmx/anaconda3/envs/AFML/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T22:30:17.515152Z",
-     "start_time": "2025-03-18T22:30:16.858555Z"
+     "end_time": "2025-03-19T07:35:34.294576Z",
+     "start_time": "2025-03-19T07:35:33.517569Z"
     }
    },
    "cell_type": "code",
@@ -613,20 +613,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K-Fold Cross-Validation Scores: [0.62280702 0.4122807  0.4122807  0.46491228 0.57017544]\n",
-      "Mean Accuracy: 0.49649122807017554\n"
+      "K-Fold Cross-Validation Scores: [0.55639098 0.44360902 0.52631579 0.51879699 0.42857143]\n",
+      "Mean Accuracy: 0.4947368421052631\n"
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 48
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-19T07:35:34.338081Z",
+     "start_time": "2025-03-19T07:35:34.336846Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "86f904322953ef61"
+   "id": "86f904322953ef61",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
